# qqrpy

./: .gitignore  LICENSE  README.md  example.py  example_full.ipynb  example_full_executed.ipynb  pyproject.toml
docs/: index.html  style.css
docs/tables/: tab01_descriptive.csv  tab01_descriptive.md  tab01_descriptive.tex  tab02_qqr_beta1.csv  tab02_qqr_beta1.md  tab02_qqr_beta1.tex  tab03_amqqr_GDP_GR.csv  tab03_amqqr_GDP_GR.md  tab03_amqqr_GDP_GR.tex  tab03_amqqr_M1_GR.csv  tab03_amqqr_M1_GR.md  tab03_amqqr_M1_GR.tex  tab03_amqqr_UNEMP.csv  tab03_amqqr_UNEMP.md  tab03_amqqr_UNEMP.tex  tab04_mqqr_beta1.csv  tab04_mqqr_beta1.md  tab04_mqqr_beta1.tex  tab05_mqqr_gamma_M1_GR.csv  tab05_mqqr_gamma_M1_GR.md  tab05_mqqr_gamma_M1_GR.tex  tab05_mqqr_gamma_UNEMP.csv  tab05_mqqr_gamma_UNEMP.md  tab05_mqqr_gamma_UNEMP.tex
mqqr/: __init__.py  additive_mqqr.py  causality.py  colors.py  mqqr.py  plotting.py  qqr.py  tables.py  utils.py
