[build-system]
requires = ["setuptools>=64,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqqr"
version = "1.0.0"
description = "Multivariate Quantile-on-Quantile Regression & Causality — a comprehensive Python toolkit implementing Sim & Zhou (2015) QQR and the multivariate m-QQR / m-QQ causality frameworks of Sinha, Alola, Ozkan, Das and co-authors, with MATLAB-style 3D Jet visualizations and publication-quality heatmaps."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Dr. Merwan Roudane", email = "merwanroudane920@gmail.com"},
]
keywords = [
    "quantile regression",
    "quantile-on-quantile",
    "multivariate quantile regression",
    "m-QQR",
    "quantile causality",
    "Granger causality in quantiles",
    "econometrics",
    "nonparametric",
    "Sim Zhou",
    "Sinha",
    "renewable energy",
    "financial econometrics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "statsmodels>=0.13",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
plotly = ["plotly>=5.0", "kaleido>=0.2"]
full = ["plotly>=5.0", "kaleido>=0.2", "seaborn>=0.12", "openpyxl>=3.0", "tabulate>=0.9"]

[project.urls]
Homepage = "https://github.com/merwanroudane/qqrpy"
Documentation = "https://github.com/merwanroudane/qqrpy"
Repository = "https://github.com/merwanroudane/qqrpy"
Issues = "https://github.com/merwanroudane/qqrpy/issues"

[tool.setuptools.packages.find]
include = ["mqqr*"]
